// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card annotations card displays title 1`] = `
<div>
  <div
    class="vaply-annotation__staticPosition"
    style="top: 5px; right: 5px; width: 100%; height: 100%;"
  >
    <div
      class="vaply-cardAnnotation__container"
    >
      This is annotation #1
    </div>
    <div
      class="vaply-annotation__closeButton"
    >
      ×
    </div>
  </div>
</div>
`;

exports[`card annotations card displays title 2`] = `
<div>
  <div
    class="vaply-annotation__staticPosition"
    style="top: 5px; right: 5px; width: 100%; height: 100%;"
  >
    <div
      class="vaply-cardAnnotation__container"
    >
      This is annotation #12
    </div>
    <div
      class="vaply-annotation__closeButton"
    >
      ×
    </div>
  </div>
</div>
`;

exports[`card annotations card renders 1`] = `
<div>
  <div
    class="vaply-annotation__staticPosition"
    style="top: 5px; right: 5px; width: 100%; height: 100%;"
  >
    <div
      class="vaply-cardAnnotation__container"
    >
      This is annotation #1
    </div>
    <div
      class="vaply-annotation__closeButton"
    >
      ×
    </div>
  </div>
</div>
`;

exports[`card annotations common applies dimensions 1`] = `
<div>
  <div
    class="vaply-annotation__staticPosition"
    style="top: 5px; right: 5px; width: 100%; height: 100%;"
  >
    <div
      class="vaply-cardAnnotation__container"
    >
      This is annotation #1
    </div>
    <div
      class="vaply-annotation__closeButton"
    >
      ×
    </div>
  </div>
</div>
`;

exports[`card annotations common applies dimensions 2`] = `
<div>
  <div
    class="vaply-annotation__staticPosition"
    style="top: 5px; right: 5px; width: 1px; height: 1px;"
  >
    <div
      class="vaply-cardAnnotation__container"
    >
      This is annotation #1
    </div>
    <div
      class="vaply-annotation__closeButton"
    >
      ×
    </div>
  </div>
</div>
`;

exports[`card annotations common applies dimensions 3`] = `
<div>
  <div
    class="vaply-annotation__staticPosition"
    style="top: 5px; right: 5px;"
  >
    <div
      class="vaply-cardAnnotation__container"
    >
      This is annotation #1
    </div>
    <div
      class="vaply-annotation__closeButton"
    >
      ×
    </div>
  </div>
</div>
`;

exports[`card annotations common applies static positioning 1`] = `
<div>
  <div
    class="vaply-annotation__staticPosition"
    style="top: 5px; right: 5px; width: 100%; height: 100%;"
  >
    <div
      class="vaply-cardAnnotation__container"
    >
      This is annotation #1
    </div>
    <div
      class="vaply-annotation__closeButton"
    >
      ×
    </div>
  </div>
</div>
`;

exports[`card annotations common applies static positioning 2`] = `
<div>
  <div
    class="vaply-annotation__staticPosition"
    style="top: 1px; right: 1px; bottom: 1px; left: 1px; width: 100%; height: 100%;"
  >
    <div
      class="vaply-cardAnnotation__container"
    >
      This is annotation #1
    </div>
    <div
      class="vaply-annotation__closeButton"
    >
      ×
    </div>
  </div>
</div>
`;
